--- a/index.html
+++ b/index.html
@@ -4,8 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo" style="font-size: 50px;font-family: Edwardian Script ITC;"> <span style="color: red;">C</span>lassy <span style="color: red;">C</span>ar</div>
+        <ul class="menu" style="word-spacing: 30px;">
+            <a href="index.html" style="color: white;text-decoration: underline;text-decoration-color: red;font-size: 20px;">Home</a>
+            <a href="propos.html" style="color: white; text-decoration: none; font-size: 20px;">About</a>
+            <a href="#" style="color: white; text-decoration: none;font-size: 20px;">Services</a>
+            <a href="contact.html" style="color: white;text-decoration: none;font-size: 20px;">Contacts</a>
+        </ul>
+        <div class="buttons">
+            <a href="#" style="text-decoration: none;color: white;">Se connecter</a>
+            <button style="padding: 15px;color: #fff;background-color: red;border-radius: 15px;">S'inscrire</button>
+        </div>
+    </header>
+
+    <section class="home">
+        <h1 style="font-size: 50px;font-family: Mongolian Baiti;font-weight: normal;">Le Luxe Redéfini: Elevez votre conduite, Elevez votre vie</h1>
+        <p style="font-family: Edwardian Script ITC; font-size: 30px;">Conduisez l'extraordinaire avec <span>Classy Car</span>.</p>
+        <button>Voir les voitures</button>
+        <div>
+            <h3 style="font-size: 30px;font-family: Mongolian Baiti;font-weight: normal;">Libérez Votre journée avec une Elégance Inégalée</h3>
+            <img src="trois.png" alt="voitures">
+        </div>
+    </section>
+
+    <hr class="separateur">
+
+    <section class="part" style="text-align: center;">
+        <h1 style="font-size: 2em; margin-bottom: 80px;">NOS SPÉCIALITÉS</h1>
+        <div class="container" style="display: flex;gap: 20px;justify-content: center;">
+            <div class="box" style="background-color: #1c1c1c; padding: 20px; border: 1px solid red;text-align: center;border-radius: 10px;width: fit-content;">
+                <img src="luxe.jpg" alt="">
+                <p>VOITURES DE LUXE</p>
+            </div>
+            <div class="box" style="background-color: #1c1c1c; padding: 20px; border: 1px solid red;text-align: center;border-radius: 10px;width: fit-content;">
+                <img src="exo.jpg" alt="">
+                <p>VOITURES EXOTIQUES</p>
+            </div>
+            <div class="box" style="background-color: #1c1c1c; padding: 20px; border: 1px solid red;text-align: center;border-radius: 10px;width: fit-content;">
+                <img src="spot.jpg" alt="">
+                <p>VOITURES DE SPORT</p>
+            </div>
+        </div>
+    </section>
+
+    <hr class="separateur">
+
+    <section style="text-align: center;">
+        <h1 style="font-size: 2em; margin-bottom: 80px;">NOS MARQUES </h1>
+        <div style="display: flex;gap: 1px; text-align: center;align-items: center;margin-left: 50px;">
+            <div>
+                <img src="lanbo.jpg" alt="" style="width: 400px;height: 400px;">
+            </div>
+            <div>
+                <img src="ferrari.jpg" alt="" style="width: 400px;height: 400px;">
+            </div>
+            <div>
+                <img src="bent.jpg" alt="" style="width: 400px;height: 400px;" >
+            </div>
+            <div>
+                <img src="RR.jpg" alt="" style="width: 400px;height: 400px;" >
+            </div>
+        </div>
+        <button style=" margin-left: 10px; padding: 15px; background-color: red;border: none;cursor: pointer;margin-top: 50px; color: #fff;">Voir les voitures</button>
+    </section>
+
+    <hr class="separateur"> 
+
+    <section style="align-items: center;text-align: center;">
+        <h1 style="font-size: 2em;font-family: Mongolian Baiti;font-weight: normal;margin-bottom: 80px;">Ce Qui Nous Distingue?</h1>
+        <img src="lui.png" alt="">
+        <div style="display: flex;align-items: center;text-align: center;gap: 50px;padding-left: 150px;margin-top: 0px;margin-bottom: 100px;">
+            <div>
+                <img src="livraison.png" alt="" style="width: 100px; height: 100px;"> 
+                <p>Livraison disponible</p>
+            </div>
+            <div>
+                <img src="réduc.png" alt="" style="width: 100px; height: 100px;">
+                <p>Des réductions</p>
+            </div>
+            <div>
+                <img src="vingt quatre.png" alt="" style="width: 100px; height: 100px;">
+                <p>Disponibilités 24/7</p>
+            </div>
+            <div>
+                <img src="vitesse.png" alt="" style="width: 100px; height: 100px;">    
+                <p>Vitesses illimités</p>
+            </div>
+            <div>
+                <img src="électr.png" alt="" style="width: 100px; height: 100px;">    
+                <p>Rccharge électrique</p>
+            </div>
+            <div>
+                <img src="vip.png" alt="" style="width: 100px; height: 100px;">    
+                <p>Clientele VIP</p>
+            </div>
+            <div>
+                <img src="essen.png" alt="" style="width: 100px; height: 100px;">    
+                <p>Pleins d'essence</p>
+            </div>
+            <div>
+                <img src="répar.png" alt="" style="width: 100px; height: 100px;">    
+                <p>Mécanicien disponibles</p>
+            </div>
+        </div>
+    </section>
+
+    <section style="height: 750px; align-items: center;text-align: center; background-size: cover; background-image: url(collection.jpg);background-repeat: no-repeat; background-size: cover;background-position: center;">
+        <div style="padding-top: 200px">
+            <h1 style="font-size: 45px; color: #fff;font-family: Mongolian Baiti;">Nous disposons de l'une des flottes les plus completes de l'industrie.Contactez-nous <br> des aujourd'hui pour réserver la voiture de vos reves!</h1>
+            <p style="font-size: 20px;font-family: Nirmala UI Semilight;">Qu'il s'agisse d'une escapade de week-end, d'un voyage d'affaires ou d'une occasion spéciale, Classy car <br> est là pour améliorer votre voyage.Regnoignez-nous pour redéfinir la route à venir et transformer <br> chaque trajet en une expérience inoubliable.</p>
+            <button style=" padding: 15px; margin-top: 10px; background-color: red;border: none;cursor: pointer; color: #fff;">Réservez maintenant</button>
+        </div>
+    </section>
+
+    <footer style="display: flex;background-color: black; gap: 250px;">
+        <div style="text-align: center; margin-left: 50px; margin-top: 50px;">
+            <p>Votre aventure commence avec</p>
+            <h1 style="font-size: 50px;font-family: Edwardian Script ITC;"><span style="color: red;">C</span>lassy <span style="color: red;">C</span>ar</h1>
+            <p>Avec nousvous vivrez une expérience unique aven notre service de qualité, <br> nous mettons à votre disposition un véritable bijoux. Quelque soit donc vos gouts: <br> luxe, simple, sport.Nous proposons une varieté de services pour vous faire passer un <br> agréable moment de détente</p>
+        </div>
+        <div style="text-align: center; margin-top: 100px;">
+            <a href="index.html">Accueil</a> <br> <br>
+            <a href="propos.html">Á propos</a> <br> <br>
+            <a href="#">Nos services</a> <br> <br>
+            <a href="contact.html">Contacts</a> <br> <br>
+        </div>
+        <div style="text-align: center;margin-top: 100px;">
+            <h3>Contactez-nous</h3>
+            <p>
+                classy_car@gmail.com <br> <br>
+                +229 01 97 02 03 04 <br> <br>
+                3 eme rue en allant vers Tanke Parana <br> Maison DS 234 <br> <br>
+                www.classycar.com <br> <br>
+
+            </p>
+           
+        </div>
+    </footer>
 </body>
 </html>
